--- a/index.html
+++ b/index.html
@@ -2,65 +2,79 @@
 <html>
 <head>
 	<title>Windows OS</title>
-	<style type="text/css">
+	<style>
 		body {
-			background: url(background.png);
-			background-size: cover;
-			margin: 0;
-			padding: 0;
-			font-family: Arial, Helvetica, sans-serif;
-		}
-		#bottom-bar {
-			position: fixed;
-			bottom: 0;
-			left: 0;
-			width: 100%;
-			height: 50px;
-			background: #1c1c1c;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			padding: 0 20px;
-			box-shadow: 0px -5px 10px rgba(0,0,0,0.5);
-		}
-		.icon {
-			width: 30px;
-			height: 30px;
-			background-size: contain;
+			background-image: url("https://wallpaperaccess.com/full/1426474.jpg");
 			background-repeat: no-repeat;
+			background-size: cover;
+			height: 100vh;
+		}
+
+		#desktop-icons {
+			position: absolute;
+			top: 40%;
+			left: 5%;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			width: 90%;
+			height: auto;
+		}
+
+		#desktop-icons div {
+			margin: 10px;
+		}
+
+		.icon {
+			background-image: url("https://cdn.icon-icons.com/icons2/37/PNG/512/computer_icon-icons.com_70979.png");
+			background-repeat: no-repeat;
+			background-size: contain;
+			height: 70px;
+			width: 70px;
 			cursor: pointer;
 		}
-		#icon-1 {
-			background-image: url(icon-1.png);
-		}
-		#icon-2 {
-			background-image: url(icon-2.png);
-		}
-		#icon-3 {
-			background-image: url(icon-3.png);
-		}
-		#icon-4 {
-			background-image: url(icon-4.png);
-		}
-		iframe {
+
+		#bottom-bar {
 			position: absolute;
-			top: 0;
+			bottom: 0;
 			left: 0;
+			background-color: #1d1d1d;
+			height: 40px;
 			width: 100%;
-			height: calc(100% - 50px);
-			border: none;
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			padding-left: 20px;
+			color: #ffffff;
+			font-weight: bold;
+		}
+
+		#start-button {
+			background-image: url("https://img.icons8.com/fluent-systems-filled/24/ffffff/windows-logo.png");
+			background-repeat: no-repeat;
+			background-size: contain;
+			height: 24px;
+			width: 24px;
+			margin-right: 10px;
 		}
 	</style>
 </head>
 <body>
-	<div id="bottom-bar">
-		<div class="icon" id="icon-1"></div>
-		<div class="icon" id="icon-2"></div>
-		<div class="icon" id="icon-3"></div>
-		<div class="icon" id="icon-4"></div>
+	<div id="desktop-icons">
+		<div class="icon"></div>
+		<div class="icon"></div>
+		<div class="icon"></div>
+		<div class="icon"></div>
+		<div class="icon"></div>
+		<div class="icon"></div>
 	</div>
-	<div id="window">
-		<iframe src="page-1.html"></iframe>
+	<div id="bottom-bar">
+		<div id="start-button"></div>
+		My Computer
 	</div>
 </body>
-</html>
+</html> 
+
+<script>
+	//Javascript can be added here if needed
+</script>
