--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Windows OS</title>
 	<style>
 		body {
-			background-image: url("https://wallpaperaccess.com/full/1426474.jpg");
+			background-image: url("background.png");
 			background-repeat: no-repeat;
 			background-size: cover;
 			height: 100vh;
