--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 	<title>Silly Bird</title>
-        background-image: url('sillybird.png');
+       body { 
+	ackground-image: url('sillybird.png');
+	} 
 </head>
 <body>
 	<script>
