--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 	<title>Silly Bird</title>
-      { 
-	ackground-image: url('sillybird.png');
-	} 
+	{background-image: url('sillybird.png');} 
 </head>
 <body>
 	<script>
