--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 	<title>Silly Bird</title>
-	{background-image: url('sillybird.png');} 
+	
 </head>
+	<style>
+p {
+  background-image: url('sillybird.png');
+}
+</style>
 <body>
 	<script>
 		for (let i = 1; i <= 1000; i++) {
