--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<title>Silly Bird</title>
 	<style>
-p {
-  background-image: url('sillybird.png');
-}
-</style>
+        #sillyBird {
+            background-image: url('sillybird.png');
+            height: 854px;
+            width: 480px;
+        }
+    </style>
 </head>
 <body>
 	<script>
