--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Silly Bird</title>
-	<style>
-        #sillyBird {
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Silly Bird</title>
+    <style>
+        body {
             background-image: url('sillybird.png');
-            height: 854px;
-            width: 480px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+        }
+        #openDuolingo {
+            margin-top: 2em;
+            padding: 1em;
+            display: inline-block;
+            background: #58a4b0;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1em;
         }
     </style>
 </head>
